--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include "menu.html" %}  
 
 <div class="content">
   <h2 class="content-head is-center">create your account</h2>
